--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-unistyles": "^3.0.20",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.21.1",
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^4.1.18",
+    "uniwind": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
