--- a/app.json
+++ b/app.json
@@ -65,7 +65,8 @@
           "backgroundColor": "#090909"
         }
       ],
-      "react-native-edge-to-edge"
+      "react-native-edge-to-edge",
+      "expo-sqlite"
     ],
     "extra": {
       "eas": {
