--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/metro-runtime": "^6.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/native": "^7.1.25",
-    "@react-navigation/native-stack": "^7.8.6",
-    "@reduxjs/toolkit": "^2.11.2",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
+    "@tanstack/react-query": "^5.90.12",
     "async-mutex": "^0.5.0",
-    "expo": "~54.0.29",
+    "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
-    "expo-splash-screen": "~31.0.12",
+    "expo-splash-screen": "~31.0.13",
+    "expo-sqlite": "~16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-edge-to-edge": "1.7.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-nitro-modules": "^0.31.10",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -49,15 +49,14 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.21.1",
     "react-native-worklets": "0.5.1",
-    "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.18",
-    "uniwind": "^1.2.2"
+    "uniwind": "^1.2.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/react": "~19.1.10",
-    "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
     "eslint": "^9.39.2",
