--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@react-navigation/native-stack": "^7.9.0",
     "@tanstack/react-query": "^5.90.12",
     "async-mutex": "^0.5.0",
+    "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-splash-screen": "~31.0.13",
