--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-query": "^5.90.12",
     "async-mutex": "^0.5.0",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-splash-screen": "~31.0.13",
@@ -50,6 +51,7 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.21.1",
     "react-native-worklets": "0.5.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "uniwind": "^1.2.2",
     "zustand": "^5.0.9"
