package update & remove theme provider as it shipped by uniwind

--- a/app.json
+++ b/app.json
@@ -65,8 +65,7 @@
           "backgroundColor": "#090909"
         }
       ],
-      "react-native-edge-to-edge",
-      "expo-sqlite"
+      "react-native-edge-to-edge"
     ],
     "extra": {
       "eas": {
