--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "lint": "eslint . --fix",
     "clean": "npx expo prebuild --clean",
     "update": "npx expo install --check",
-    "devbuild:android": "eas build -p android --profile development",
     "devbuild:ios": "eas build -p ios --profile development",
+    "devbuild:android": "eas build -p android --profile development",
     "devbuild:all": "eas build -p all --profile development",
     "build:ios": "eas build -p ios --profile production",
+    "build:android": "eas build -p android --profile production",
     "submit:android": "eas submit -p android --latest",
     "submit:ios": "eas submit -p ios --latest",
     "submit:all": "eas submit --platform",
@@ -35,10 +36,9 @@
     "async-mutex": "^0.5.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
-    "expo": "~54.0.30",
+    "expo": "~54.0.32",
     "expo-constants": "~18.0.12",
     "expo-splash-screen": "~31.0.13",
-    "expo-sqlite": "~16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -53,8 +53,8 @@
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "uniwind": "^1.2.2",
-    "zustand": "^5.0.9"
+    "uniwind": "^1.2.7",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
